made new headline and changelog post

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body>
         <header>
             <div id="news_div">
-                <p id="news"><a href="https://kingzavey.neocities.org/newspaper">CARPENTER FIGURES OUT NEW METHOD FOR MAKING HOMES LOOK FANCIER. "They're called popcorn ceilings for a reason!" SAYS CARPENTER WITH HIS MOUTH FULL OF CEILING</a></p>
+                <p id="news"><a href="https://kingzavey.neocities.org/newspaper">BUYERS OF NEWLY PUBLISHED PARENTING BOOK ANGRY TO DISCOVER THAT THE BOOK IS ABOUT CAT PARENTING</a></p>
             </div>
             <div id="ocomic_div">
                 <p><a href="ocomic">WELCOME TO THE WORLD OF <span id="comic_quote">comic</span></a></p>
@@ -32,8 +32,5 @@
         </div>
         
         <img id="meowl" src="surprised.png" usemap=#meowlmap>
-        <map name="meowlmap">
-            <area shape="circle" coords=
-        </map>
   </body>
 </html>
