added :3 to changelog post

--- a/newspaper/index.html
+++ b/newspaper/index.html
@@ -11,7 +11,7 @@
         <h3>BUYERS OF NEWLY PUBLISHED PARENTING BOOK ANGRY TO DISCOVER THAT THE BOOK IS ABOUT CAT PARENTING</h3>
         <p>11/24/25 - i learned how to use git, and i made a github repo for this site!! it has all the files and images that are on my computer, so now i can work on the site
             from anywhere!! it was a little more complicated than i thought at first, but i think i got the hang of it. also the code editor i use, phoenix code, integrates git
-            really well into the software and makes it really easy to use. big shoutouts to phoenix code</p>
+            really well into the software and makes it really easy to use. big shoutout to phoenix code :3</p>
         <hr>
         <h3>CARPENTER FIGURES OUT NEW METHOD FOR MAKING HOMES LOOK FANCIER. "They're called popcorn ceilings for a reason!" SAYS CARPENTER WITH HIS MOUTH FULL OF CEILING</h3>
         <p>11/8/25 - i finally made the extra header thing for the comic page. I made the site for the comic a while ago, but the updated home page just hasnt had a link to it
