added new img and made imgmap for said image

--- a/index.html
+++ b/index.html
@@ -31,6 +31,17 @@
             <img class="construction" id="worm2" src="worm.gif">
         </div>
         
-        <img id="meowl" src="surprised.png" usemap=#meowlmap>
-  </body>
+        <img id="meowl" src="surprised.png">
+
+        <img id="blow_me" src="blow_me.jpg" usemap="#blow_map">
+
+        <map name="blow_map">
+            <area shape="circle" coords="184, 177, 21" onclick="blowMapHeartAlert()">
+        </map>
+    </body>
 </html>
+<script>
+    function blowMapHeartAlert() {
+        alert("I LOVE THE INTERNET TOO!");
+    }
+</script>
