--- a/newspaper/newindex.html
+++ b/newspaper/newindex.html
@@ -4,13 +4,14 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>changelog</title>
-        <link rel="stylesheet" href="/newspaper/style.css">
+        <link rel="stylesheet" href="/newspaper/newstyle.css">
     </head>
     <body>
         <header>
             <img src="/IMAGES/NEWSPAPER/website_header.png" alt="THE DAILY FISH!">
+            <h3>We never publish articles daily!</h3>
         </header>
-        <div id="main">
+        <main>
             <h3>BUYERS OF NEWLY PUBLISHED PARENTING BOOK ANGRY TO DISCOVER THAT THE BOOK IS ABOUT CAT PARENTING</h3>
             <p>11/24/25 - i learned how to use git, and i made a <a href="https://github.com/kwoshh/kwoshhsite">github repo</a> for this site!! it has all the files and images that
                 are on my computer, so now i can work on the site from anywhere!! it was a little more complicated than i thought at first, but i think i got the hang of it. also
@@ -39,6 +40,9 @@
             <h3>MAN GETS SLOWLY EATEN BY ANTS FOR 6 HOURS. "I like to savor my meals." SAYS ANT</h3>
             <p>10/18/25 - Im making a change log wowza. learned how to do css animations and made the boucing heading animation
                 and the news scroll thing.</p>
-        </div>
+        </main>
+        <footer>
+            <a href="/index.html">HOMEPAGE</a>
+        </footer>
     </body>
 </html>
